# native-to-anchor

./: .gitignore  Cargo.toml  README.md
anchor/mango/: mango.rs
anchor/metaplex/: token-metadata.rs
anchor/other/: realloc.rs
anchor/raydium/: raydium-amm.rs  raydium-farm.rs  raydium-stable.rs  raydium-staking.rs
anchor/serum/: serum.rs
anchor/solana/: associated-token-account.rs  binary-option.rs  binary-oracle-pair.rs  governance.rs  name-service.rs  record.rs  stake-pool.rs  stateless-asks.rs  token-lending.rs  token-program.rs  token-swap.rs
client/: build-packages.sh  package.json
client/tests/: README.md  package.json
example/: README.md
example/program/: Cargo.toml
example/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
generator/: Cargo.toml
generator/src/: cli.rs  coder.rs  generator.rs  idl.rs  main.rs
generator/src/constants/: coder.rs  common.rs  idl.rs  known_types.rs  mod.rs
generator/src/utils/: coder.rs  common.rs  generator.rs  idl.rs  mod.rs
idl/mango/: mango.json
idl/metaplex/: token-metadata.json
idl/other/: realloc.json
idl/raydium/: raydium-amm.json  raydium-farm.json  raydium-stable.json  raydium-staking.json
idl/serum/: serum.json
idl/solana/: associated-token-account.json  binary-option.json  binary-oracle-pair.json  governance.json  name-service.json  record.json  stake-pool.json  stateless-asks.json  token-lending.json  token-program.json  token-swap.json
instructions/mango/: mango.rs
instructions/metaplex/: token-metadata.rs
src/: constants.rs  main.rs  utils.rs
(+25 files in other folders)
